--- a/food-shop/css/style.css
+++ b/food-shop/css/style.css
@@ -3888,7 +3888,6 @@ form.findus .form-control, form.findus textarea {
     .logo-dark {max-width: 221px !important;}
     .side-menu .inner-wrapper {padding: 1.2rem 0rem !important;}
     .col-ml-1 {margin-left: 8.333333%;}
-    .fancybox-image, .fancybox-spaceball {padding: 0px 120px 0 120px !important;}
     .footer-sm {
         position: relative;
         top: 35px;
